# cpanel-file-mover

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
cpanel-file-mover/: .gitignore  LICENSE
cpanel_file_mover/: __init__.py  transfer.py
cpanel_mover/: __init__.py  sftp_transfer.py
