[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpanel-file-mover"
version = "0.1.0"
description = "Simple SFTP-based file mover for cPanel hosts"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Hordekiller" } ]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
